--- a/home_module/templates/home_module/wallpapers.html
+++ b/home_module/templates/home_module/wallpapers.html
@@ -15,12 +15,12 @@
           <p>Free Wallpapers</p>
           <p>Huge gallery with a really nice variety</p>
             <div class="scroll-icon">
-                <a class="scrollTo" data-scrollTo="portfolio" href="#"><img src="{% static 'home_module/img/scroll-icon.png' %}" alt=""></a>
+                <a class="scrollTo" data-scrollTo="portfolio" href="#"><img src="{% static 'img/scroll-icon.png' %}" alt=""></a>
             </div>    
         </div>
     </div>
     <video autoplay="" loop="" muted>
-        <source src="{% static 'home_module/highway-loop.mp4' %}" type="video/mp4" />
+        <source src="{% static 'highway-loop.mp4' %}" type="video/mp4" />
     </video>
 </div>
 
