--- a/contact_module/templates/contact.html
+++ b/contact_module/templates/contact.html
@@ -24,7 +24,7 @@
             <h3 class="header-title" style="color: white; text-align: center; padding-top:3%;">Say hello to <em>Highway</em></h3>
             <h2 class="header-title" style="margin-left: 100px; color: white;">
             <i class="fas fa-chevron-left"></i>
-            <a onclick="history.back()" style="color: white;">Back</a></h2>
+            <a onclick="history.back()" class="a-back">Back</a></h2>
         <!-- Modal Body -->
         <div class="modal-body" style="position: relative;">
           <div class="col-md-6 col-md-offset-3">
