--- a/blog_module/templates/blog_module/components/post_categories.html
+++ b/blog_module/templates/blog_module/components/post_categories.html
@@ -4,7 +4,7 @@
     </div>
     <ul>
         {% for category in categories %}
-            <li><a href="#">{{ category.title }} ({{ post_count }})</a></li>
+            <li><a href="#">{{ category.title }} ({{ category.posts_count }})</a></li>
         {% endfor %}
     </ul>
 </div>
