--- a/blog_module/templates/blog_module/single-post.html
+++ b/blog_module/templates/blog_module/single-post.html
@@ -1,6 +1,7 @@
 {% extends 'base.html' %}
 {% load static %}
 {% load thumbnail %}
+{% load render_partial %}
 
 <!-- 
 
@@ -89,18 +90,7 @@ https://templatemo.com/tm-520-highway
                     </ul>
                 </div>
                
-                <div class="categories">
-                    <div class="sidebar-heding">
-                        <h2>Categories</h2>
-                    </div>
-                    <ul>
-                        <li><a href="#">> Lifestyle (7)</a></li>
-                        <li><a href="#">> Branding (9)</a></li>
-                        <li><a href="#">> Nature (14)</a></li>
-                        <li><a href="#">> Work Stuff (6)</a></li>
-                        <li><a href="#">> Science (5)</a></li>
-                    </ul>
-                </div>
+                {% render_partial 'blog_module.views.post_categories_component' %}
 
             </div>
         </div>
