--- a/contact_module/templates/contact.html
+++ b/contact_module/templates/contact.html
@@ -10,10 +10,9 @@
   <link rel="stylesheet" href="{% static 'css/light-box.css' %} ">
   <link rel="stylesheet" href="{% static 'css/templatemo-style.css' %} ">
   <link href="https://fonts.googleapis.com/css?family=Kanit:100,200,300,400,500,600,700,800,900" rel="stylesheet">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
   <script src="{% static 'js/vendor/modernizr-2.8.3-respond-1.4.2.min.js' %}"></script>
-  <script src='https://kit.fontawesome.com/a076d05399.js' crossorigin='anonymous'></script>
+    <script src="https://kit.fontawesome.com/7cdbbd20f0.js" crossorigin="anonymous"></script>
   
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -23,7 +22,7 @@
 <body style="background-color: black;">
             <h3 class="header-title" style="color: white; text-align: center; padding-top:3%;">Say hello to <em>Highway</em></h3>
             <h2 class="header-title" style="margin-left: 100px; color: white;">
-            <i class="fas fa-chevron-left"></i>
+             <i class="fa-solid fa-arrow-left"></i>
             <a onclick="history.back()" class="a-back">Back</a></h2>
         <!-- Modal Body -->
         <div class="modal-body" style="position: relative;">
