--- a/blog_module/templates/blog_module/blog.html
+++ b/blog_module/templates/blog_module/blog.html
@@ -48,7 +48,7 @@ https://templatemo.com/tm-520-highway
                                 {% endthumbnail %}
                                 {% comment %} <img src="{{ post.image.url }}" alt=""> {% endcomment %}
                                 <div class="text-content">
-                                    <span><span>Author</span> :<a href="#"> {{ post.author }}</a> / <a href="#">{{ post.release_date }}</a> / <a href="#">Rating : {{ post.rating }}</a></span>
+                                    <span><span>Author</span> :<a href="#"> {{ post.author }}</a> / <a href="#">{{ post.release_date }}</a> / <a href="#"><i class="fa-solid fa-eye"></i> {{ visit_count }}</a></span>
                                     <h2>{{ post.title }}</h2>
                                     <p> {{ post.description }} 
                                     <br><br></p>
@@ -104,7 +104,6 @@ https://templatemo.com/tm-520-highway
             </div>
         </div>
     </div>
-
 
 {% endblock content %}
 
