--- a/blog_module/templates/blog_module/includes/post_comments_partial.html
+++ b/blog_module/templates/blog_module/includes/post_comments_partial.html
@@ -2,7 +2,7 @@
     
     {% for comment in comments %}
         <li>
-            {{ comment }}
+            <p>{{ comment.comment }}</p>
         </li>
     {% endfor %}
         
