--- a/templates/shared/references/header_references.html
+++ b/templates/shared/references/header_references.html
@@ -4,7 +4,9 @@
 <link rel="stylesheet" href="/static/css/fontAwesome.css">
 <link rel="stylesheet" href="/static/css/light-box.css">
 <link rel="stylesheet" href="/static/css/templatemo-style.css">
+<link rel="stylesheet" href="/static/css/custom.css">
 <link href="https://fonts.googleapis.com/css?family=Kanit:100,200,300,400,500,600,700,800,900" rel="stylesheet">
 
 <script src="/static/js/vendor/modernizr-2.8.3-respond-1.4.2.min.js"></script>
 <script src="https://kit.fontawesome.com/yourcode.js" crossorigin="anonymous"></script>
+<script src="https://kit.fontawesome.com/7cdbbd20f0.js" crossorigin="anonymous"></script>
