-Posts views counts have been updated. -New queryset has been added.

--- a/blog_module/templates/blog_module/blog.html
+++ b/blog_module/templates/blog_module/blog.html
@@ -48,7 +48,7 @@ https://templatemo.com/tm-520-highway
                                 {% endthumbnail %}
                                 {% comment %} <img src="{{ post.image.url }}" alt=""> {% endcomment %}
                                 <div class="text-content">
-                                    <span><span>Author</span> :<a href="#"> {{ post.author }}</a> / <a href="#">{{ post.release_date }}</a> / <a href="#"><i class="fa-solid fa-eye"></i> {{ visit_count.posts_visit }}</a></span>
+                                    <span><span>Author</span> :<a href="#"> {{ post.author }}</a> / <a href="#">{{ post.release_date }}</a> / <a href="#"><i class="fa-solid fa-eye"></i> {{ post.views }}</a></span>
                                     <h2>{{ post.title }}</h2>
                                     <p> {{ post.description }}
                                     <br><br></p>
