Comment system has been updated

--- a/blog_module/templates/blog_module/blog.html
+++ b/blog_module/templates/blog_module/blog.html
@@ -83,7 +83,7 @@ https://templatemo.com/tm-520-highway
                 <div class="side-bar">
                     <div class="search">
                         <fieldset>
-                            <form action="{% url 'search' %}">
+                            <form action="{% url 'search' %}" method="get">
                                 <input name="search" type="text" class="form-control" id="search" placeholder="Search..." required="">
                             </form>
                         </fieldset>
