--- a/templates/shared/components/menu_component.html
+++ b/templates/shared/components/menu_component.html
@@ -14,7 +14,7 @@
 
                 {% if request.user.is_authenticated %}
                     <li>
-                        <a href="">Account</a>
+                        <a href="">Logged in as {{ user }}</a>
                     </li>
                 {% else %}
                   <li>
