--- a/templates/shared/references/footer_references.html
+++ b/templates/shared/references/footer_references.html
@@ -6,3 +6,4 @@
 
 <script src="/static/js/plugins.js"></script>
 <script src="/static/js/main.js"></script>
+<script src="/static/js/custom.js"></script>
